# mylife

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release-macos.yml
apps/core/: go.mod  go.sum
apps/core/cmd/mylife/: main.go
apps/core/internal/domain/: status.go  task.go  task_event.go
apps/core/internal/http/: router.go  status_handler.go  task_handler.go
apps/core/internal/markdown/: parser.go
apps/core/internal/reminder/: scheduler.go
apps/core/internal/service/: task_service.go  (+1 more)
apps/core/test/: gantt_timeline_test.go  markdown_sync_test.go  reminder_scheduler_test.go  seed.go  task_api_test.go  task_status_test.go  test_server.go
apps/desktop/: index.html  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts  widget.html
apps/desktop/e2e/: today-flow.spec.ts
apps/desktop/src/: main.tsx  widget.test.tsx  widget.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-06-30-mylife-ui-remediation.md  2026-06-30-mylife-v1.md  2026-07-01-tiptap-notion-like-editor.md
docs/superpowers/prototypes/: 2026-06-30-mylife-main-window.html  2026-06-30-mylife-remediation-desktop.html  2026-06-30-mylife-widget.html
docs/superpowers/specs/: 2026-06-30-mylife-component-spec.md  2026-06-30-mylife-design.md  2026-06-30-mylife-frontend-correction.md  2026-06-30-mylife-interaction-states.md  2026-06-30-mylife-visual-system.md
scripts/: release-macos.sh
(+39 files in other folders)
