[package]
name = "mylife-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "mylife_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.1.1", features = [] }
# `cookie 0.18.1` still assumes pre-0.3.52 `time::parsing::Parsable::parse`.
time = "=0.3.51"
